[493/906] glfiltershader: fix crash when loading shader file

Just use g_file_get_contents() instead of home-made file loading.
Fixes two issues - one is that we should pass "r" to fopen and
not O_RDONLY, the other is that an incorrect variable was used
to read the file length, leading to an empty shader file.

Spotted by: Wang Xin-yu (王昕宇) <comicfans44@gmail.com>

https://bugzilla.gnome.org/show_bug.cgi?id=702844
https://bugzilla.gnome.org/show_bug.cgi?id=702845

Conflicts:
	gst/gl/gstglfiltershader.c